# ugc

./: .editorconfig  .env.example  .gitignore  .pre-commit-config.yaml  Makefile  README.md  docker-compose.yml  pyproject.toml  setup.cfg
.github/workflows/: lint.yml
backend/clickhouse/: requirements.txt
backend/clickhouse/docker/config/: metrika.xml
backend/clickhouse/docker/config/node1/: users.xml
backend/clickhouse/docker/config/node4/: config.xml
backend/clickhouse/docker/initdb/: 00-create-db.sh
backend/clickhouse/docker/zk-config/: zoo.cfg
backend/clickhouse/src/: benchmarks.py  db_upgrade.py  load_data.py  services.py  settings.py
backend/clickhouse/src/adapters/: base.py  models.py
backend/clickhouse/src/adapters/clickhouse/: client.py
backend/clickhouse_initer/: Dockerfile  requirements.txt
backend/clickhouse_initer/mapping/: node[1].sql  node[2].sql  node[3].sql  node[4].sql
backend/clickhouse_initer/src/: clickhouse_initer.py  main.py
backend/clickhouse_initer/src/config/: base.py  logger.py  nodes.py
backend/nginx/configs/: producer_storage.conf
backend/producer_storage/: Dockerfile  requirements.txt  start.sh
backend/producer_storage/modules/auth/src/: decorators.py  utils.py
backend/producer_storage/src/: main.py
backend/producer_storage/src/api/v1/: movies.py
backend/producer_storage/src/containers/: base.py  movie.py
backend/producer_storage/src/core/: config.py
backend/producer_storage/src/models/: base.py  movie.py
backend/producer_storage/src/resources/: avro_serializer.py  json_serializer.py  string_serializer.py
backend/producer_storage/src/services/producer/: base.py  kafka.py
backend/producer_storage/src/services/signature/: base.py
backend/producer_storage/src/utils/: error_dependency_handler.py
backend/producer_storage/src/utils/error_handlers/: auth.py
kafka_loader/: kafka_serialization.py  kafka_worker.py
kafka_loader/producer/: base.py  kafka.py
olap_research/: README.md  READMY.MD  queries.json
olap_research/clickhouse/: README.md
olap_research/clickhouse/src/: benchmarks.py  db_upgrade.py  load_data.py  services.py  settings.py
olap_research/clickhouse/src/adapters/: base.py  enums.py  models.py
olap_research/vertica/: README.md
olap_research/vertica/src/: clear_database.py  load_data.py  pyproject.toml  select_data.py
olap_research/vertica/src/config/: config.py  example.env
olap_research/vertica/src/dataset/: table.ddl
olap_research/vertica/src/dataset_loader/: dataset_loader.py
olap_research/vertica/src/utility/: utility.py
olap_research/vertica/src/vertica_worker/: vertica_worker.py
(+10 files in other folders)
