[tool.poetry]
name = "ugc"
version = "0.1.0"
description = ""
authors = ["xczdenis", "Kariyma", "xh4vm"]
readme = "README.md"
packages = []

[tool.poetry.dependencies]
python = "^3.10"

[tool.poetry.group.build.dependencies]
clickhouse-driver = "^0.2.5"
loguru = "^0.6.0"
backoff = "^2.2.1"
pydantic = "^1.10.2"
python-dotenv = "^0.21.0"


[tool.poetry.group.pre-commit.dependencies]
pre-commit = ">=2.19.0"


[tool.poetry.group.clickhouse.dependencies]
clickhouse-driver = "^0.2.5"
loguru = "^0.6.0"
backoff = "^2.2.1"
pydantic = "^1.10.2"
python-dotenv = "^0.21.0"


[tool.poetry.group.linters.dependencies]
mypy = "^0.991"
lxml = "^4.9.1"
wemake-python-styleguide = "^0.17.0"
flake8-html = "^0.4.3"


[tool.poetry.group.formatters.dependencies]
autopep8 = "1.6.0"


[tool.black]
skip-string-normalization = true

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
