[tool.poetry]
name = "verticadataset"
version = "0.1.0"
description = ""
authors = ["Kariyma <mariika-sun@yandex.ru>"]

[tool.poetry.dependencies]
python = "^3.10"
flake8 = "5.0.4"
pre-commit = "2.20.0"
vertica-python = "1.1.1"
pydantic = {extras = ["dotenv"], version = "1.10.2"}
pandas = "1.5.2"
loguru = "0.6.0"
backoff = "^2.2.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
